// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot regression GPIB connection 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.1
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"GPIB0::5::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass


    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression USB connection 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.1
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"USB0::0x0699::0x0527::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass


    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression comment step 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    # Configure acquisition

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression deeply nested groups 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    # Group: Outer
    # Group: Inner
    scpi.write(\\"CH1:SCALE 1.0\\")
    log_cmd(\\"CH1:SCALE 1.0\\", \\"\\")

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression empty script 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass


    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression full realistic workflow 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    scpi.write(\\"ACQ:STATE OFF\\")
    log_cmd(\\"ACQ:STATE OFF\\", \\"\\")
    _ = scpi.query(\\"*OPC?\\").strip()
    log_cmd(\\"*OPC?\\", _)
    time.sleep(0.2)
    scpi.write(\\"DATA:SOURCE CH1\\")
    log_cmd(\\"DATA:SOURCE CH1\\", \\"\\")
    scpi.write(\\"DATA:START 1\\")
    log_cmd(\\"DATA:START 1\\", \\"\\")
    scpi.write(\\"DATA:STOP 10000\\")
    log_cmd(\\"DATA:STOP 10000\\", \\"\\")
    waveform_data = scpi.query(\\"CURVE?\\").strip()
    log_cmd(\\"CURVE?\\", waveform_data)
    scpi.write(\\"ACQ:STATE ON\\")
    log_cmd(\\"ACQ:STATE ON\\", \\"\\")

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression multiple param substitutions 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    scpi.write(\\"SOURce1:FREQuency:FIXed 1000000\\")
    log_cmd(\\"SOURce1:FREQuency:FIXed 1000000\\", \\"\\")

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression nested group 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    # Group: Acquisition Setup
    scpi.write(\\"ACQ:STATE OFF\\")
    log_cmd(\\"ACQ:STATE OFF\\", \\"\\")
    opc = scpi.query(\\"*OPC?\\").strip()
    log_cmd(\\"*OPC?\\", opc)
    scpi.write(\\"ACQ:STATE ON\\")
    log_cmd(\\"ACQ:STATE ON\\", \\"\\")

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression parameter substitution 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    scpi.write(\\"OUTPut1:STATe ON\\")
    log_cmd(\\"OUTPut1:STATe ON\\", \\"\\")

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression python snippet 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    print(f\\"Scale: {scale_val}\\")
    result = scale_val.strip()

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression set_and_query 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    scpi.write(\\"CH1:SCALE 1.0\\")
    scale_val = scpi.query(\\"CH1:SCALE?\\").strip()
    log_cmd(\\"CH1:SCALE?\\", scale_val)

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression single query 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    idn = scpi.query(\\"*IDN?\\").strip()
    log_cmd(\\"*IDN?\\", idn)

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression single write 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    scpi.write(\\"CH1:SCALE 1.0\\")
    log_cmd(\\"CH1:SCALE 1.0\\", \\"\\")

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression socket connection 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 10.0.0.1
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::10.0.0.1::5025::SOCKET\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = \\\\n\\"  # Socket requires line termination
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass


    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`snapshot regression write + query + sleep sequence 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    scpi.write(\\"CH1:SCALE 1.0\\")
    log_cmd(\\"CH1:SCALE 1.0\\", \\"\\")
    idn = scpi.query(\\"*IDN?\\").strip()
    log_cmd(\\"*IDN?\\", idn)
    time.sleep(0.5)

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;
